[gd_scene load_steps=29 format=2]

[ext_resource path="res://Script/Pieces/s_fire.gd" type="Script" id=1]
[ext_resource path="res://Art/Building/Fire animation/fire_2_0004.png" type="Texture" id=2]
[ext_resource path="res://Art/Building/Fire animation/fire_2_0005.png" type="Texture" id=3]
[ext_resource path="res://Art/Building/Fire animation/fire_2_0003.png" type="Texture" id=4]
[ext_resource path="res://Art/Building/pieces/prop_1a.png" type="Texture" id=5]
[ext_resource path="res://Art/Building/Fire animation/fire_3_0002.png" type="Texture" id=6]
[ext_resource path="res://Art/Building/Fire animation/fire_3_0001.png" type="Texture" id=7]
[ext_resource path="res://Art/Building/Fire animation/fire_2_0000.png" type="Texture" id=8]
[ext_resource path="res://Art/Building/Fire animation/fire_2_0001.png" type="Texture" id=9]
[ext_resource path="res://Art/Building/Fire animation/fire_2_0002.png" type="Texture" id=10]
[ext_resource path="res://Art/Building/Fire animation/fire_3_0005.png" type="Texture" id=11]
[ext_resource path="res://Art/Building/Fire animation/fire_2_0006.png" type="Texture" id=12]
[ext_resource path="res://Art/Building/Fire animation/fire_3_0000.png" type="Texture" id=13]
[ext_resource path="res://Art/Building/Fire animation/fire_1_0000.png" type="Texture" id=14]
[ext_resource path="res://Art/Building/Fire animation/fire_1_0001.png" type="Texture" id=15]
[ext_resource path="res://Art/Building/Fire animation/fire_3_0003.png" type="Texture" id=16]
[ext_resource path="res://Art/Building/Fire animation/fire_3_0004.png" type="Texture" id=17]
[ext_resource path="res://Art/Building/Fire animation/fire_1_0003.png" type="Texture" id=18]
[ext_resource path="res://Art/Building/Fire animation/fire_1_0004.png" type="Texture" id=19]
[ext_resource path="res://Art/Building/Fire animation/fire_1_0005.png" type="Texture" id=20]
[ext_resource path="res://Art/Building/Fire animation/fire_1_0006.png" type="Texture" id=21]
[ext_resource path="res://Art/Building/Fire animation/fire_1_0002.png" type="Texture" id=22]
[ext_resource path="res://Art/Building/Fire animation/fire_3_0006.png" type="Texture" id=23]
[ext_resource path="res://Audio/Effects/razziVIAGGIO.wav" type="AudioStream" id=24]
[ext_resource path="res://Audio/Effects/razziPARTENZA.wav" type="AudioStream" id=25]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 22 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "activated",
"speed": 24.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 12 ) ],
"loop": true,
"name": "activated",
"speed": 24.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 11 ), ExtResource( 23 ) ],
"loop": true,
"name": "activated",
"speed": 24.0
} ]

[node name="Fire" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 4.29153e-06, 2.97303 )
texture = ExtResource( 5 )

[node name="Fire_1" type="AnimatedSprite" parent="."]
position = Vector2( -1.12247, 31.6353 )
frames = SubResource( 1 )
animation = "activated"
frame = 1

[node name="Fire_2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -1.12247, 39.5723 )
frames = SubResource( 2 )
animation = "activated"
frame = 5

[node name="Fire_3" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -0.455048, 44.65 )
frames = SubResource( 3 )
animation = "activated"
frame = 3

[node name="Tween" type="Tween" parent="."]

[node name="AudioStart" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
mix_target = 2
bus = "Fire"

[node name="AudioOngoing" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
mix_target = 2
bus = "Fire"
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="finished" from="AudioStart" to="." method="_on_AudioStart_finished"]
